elastic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-deployment
  labels:
    app: elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
      - name: elastic
        image: docker.elastic.co/elasticsearch/elasticsearch:8.2.3
        ports:
        - containerPort: 9200
        - containerPort: 9300
