kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana-deployment
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:8.2.3
        ports:
        - containerPort: 5601
        volumeMounts:
        - mountPath: /usr/share/kibana/config
          name: kibana-config
        - mountPath: /usr/share/kibana/data
          name: kibana-data
      volumes:
      - name: kibana-config
        hostPath:
          path: /var/axsis/kibana/config
          type: Directory
      - name: kibana-data
        hostPath:
          path: /var/axsis/kibana/data
          type: Directory
