magix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-10-19T15:03:02Z"
  generation: 1
  labels:
    app: magix
  name: magix
  namespace: default
  resourceVersion: "119470"
  selfLink: /apis/apps/v1/namespaces/default/deployments/magix
  uid: f53eb8b7-3eaf-4afd-ba61-d0c2f217b4e2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: magix
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: magix
    spec:
      containers:
      - image: ingvord/magix:magix-0.14
        imagePullPolicy: IfNotPresent
        name: magix
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
