tango-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-11-05T14:15:43Z"
  generation: 1
  labels:
    app: tango-host
  name: tango-host
  namespace: default
  resourceVersion: "16536"
  selfLink: /apis/apps/v1/namespaces/default/deployments/tango-host
  uid: 4575da7c-05e8-456b-928e-b0e117e5a412
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: tango-host
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tango-host
    spec:
      containers:
      - image: ingvord/axsis-virtual-tango-host:AxsisVirtualTangoHost-0.9
        imagePullPolicy: IfNotPresent
        name: axsis-virtual-tango-host
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
        - containerPort: 10000
      hostNetwork: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
