web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
  creationTimestamp: "2021-10-19T14:27:27Z"
  generation: 2
  labels:
    app: web
  name: web
  namespace: default
  resourceVersion: "121548"
  selfLink: /apis/apps/v1/namespaces/default/deployments/web
  uid: 94c21623-2392-4e52-9fa6-0dab54e44683
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: web
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: web
    spec:
      containers:
      - image: ingvord/axsis-gui:v1.0.6
        imagePullPolicy: IfNotPresent
        name: axsis-gui
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-10-19T14:27:51Z"
    lastUpdateTime: "2021-10-19T14:27:51Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-10-19T14:27:27Z"
    lastUpdateTime: "2021-10-19T15:27:10Z"
    message: ReplicaSet "web-8c9d988d7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
