apm-server.service.yaml
#kind: Service
#apiVersion: v1
#metadata:
#  name: apm-server
#spec:
#  type: ExternalName
#  externalName: helm-apm-server-default-apm-server.kube-system.svc.cluster.local
#  ports:
#  - port: 8200
#    targetPort: 8200
#    nodePort: 8200
apiVersion: v1
kind: Service
metadata:
  name: apm-server
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 8200
---
apiVersion: v1
kind: Endpoints
metadata:
  name: apm-server
subsets:
  - addresses:
      - ip: 132.249.213.246
    ports:
      - port: 8200
