axsis.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: axsis
  name: axsis
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 30493
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: axsis
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
