elastic.service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"creationTimestamp":"2022-06-21T18:29:19Z","labels":{"app":"elastic"},"n>
  creationTimestamp: "2022-06-21T18:29:19Z"
  labels:
    app: elastic
  name: elastic-deployment
  namespace: default
  resourceVersion: "9587395"
  selfLink: /api/v1/namespaces/default/services/elastic-deployment
  uid: 9dd811eb-f5fd-4253-8b69-6fc784f7d517
spec:
  clusterIP: 10.152.183.76
  clusterIPs:
  - 10.152.183.76
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port-1
    nodePort: 32064
    port: 9200
    protocol: TCP
    targetPort: 9200
  - name: port-2
    nodePort: 31360
    port: 9300
    protocol: TCP
    targetPort: 9300
  selector:
    app: elastic
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
