kibana.service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2022-06-21T19:58:16Z"
  labels:
    app: kibana
  name: kibana-deployment
  namespace: default
  resourceVersion: "9596498"
  selfLink: /api/v1/namespaces/default/services/kibana-deployment
  uid: 48ab0f0d-76ca-4d1c-b863-c7e876d6dfab
spec:
  clusterIP: 10.152.183.242
  clusterIPs:
  - 10.152.183.242
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32065
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
