magix.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: magix
  name: magix
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - nodePort: 32407
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: magix
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
