pi-controller.external.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-controller
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 50000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pi-controller
subsets:
  - addresses:
      - ip: XXX.
    ports:
      - port: 50000
