ingress.logging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-realm: Authentication Required
    ingress.kubernetes.io/auth-secret: internal-services-auth
    ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.allow-http: "false"
  name: ingress-monitoring
  namespace: monitoring
spec:
  tls:
  - hosts:
    - kibana.my
    - elasticsearch.my
    secretName: example-tls
  rules:
  - host: kibana.my
    http:
      paths:
      - backend:
          serviceName: kibana-deployment
          servicePort: 5601
        path: /
  - host: elasticsearch.my
    http:
      paths:
      - backend:
          serviceName: elasticsearch-deployment
          servicePort: 9200
        path: /
